--- a/training/src/polymorphism/.gitignore
+++ b/training/src/polymorphism/.gitignore
@@ -5,3 +5,7 @@
 /loveMovie.class
 /thrillerMovie.class
 /exampleOne.class
+/exampleTwo.class
+/movies.class
+/romanceMovie.class
+/actionMovie.class
